--- a/flexColumns/flexColumns2.html
+++ b/flexColumns/flexColumns2.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="flag1_style.css">
+    <title>Columns 2</title>
+    <link rel="stylesheet" href="flexColumns2_style.css">
 </head>
 <body>
-    <div id="flagbackground">
-        <div id="cross"></div>
-        <div id="cross2"></div>
-    </div>
+    <div class="row">
+        <div class="col">1/3</div> 
+        <div class="col-2">2/3</div>
+    </div>    
 </body>
 </html>
