--- a/profilePage.html
+++ b/profilePage.html
@@ -14,10 +14,10 @@
     <div>
 
         <div class="nav">
-            <h1 class="nav-title">Profile</h1>
-            <ul class="nav-links">
+            <h1>Profile</h1>
+            <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#" class="active"></a> My Profile</a></li>
+                <li><a href="#"></a> My Profile</a></li>
                 <li><a href="#">Find Connections</a></li>
                 <li><button class="btn">Sign Out</button></li>
             </ul>
@@ -30,24 +30,31 @@
 
         <div id="main">
             <img id="userImage" src="./icons1/user-circle.png" alt="user image">
-            <h1 id="userName">Jane Doe</h1>
+            <h1>Jane Doe</h1>
 
-            <div id="second">
+
+            
+            <p id="p1">
                 <img id="map" src="./icons/map-marker.png" alt="">
-                <p id="p1">Seattle</p>
-            </div>
+                Seattle
+            </p>
 
-            <div id="userContent">
 
-                <ul id="ulUser">
-                    <li id="list2">Developer |</li>
-                    <li id="list2">Engineer |</li>
-                    <li id="list2">Problem Solver</li>
-                </ul>
-                <p id="p2">Master of shadows and the Internet!</p>
-                <img id="gear" src="./icons/gear.png" alt="gear"> <a id="a2" href="#">edit profile</a>
+            <ul>
+                <li>Developer |</li>
+                <li>Engineer |</li>
+                <li>Problem Solver</li>
+            </ul>
+            <p id="p2">Master of shadows and the Internet!</p>
 
-            </div>
+
+            <a id="a2" href="#">
+
+                <img id="gear" src="./icons/gear.png" alt="gear">
+
+                edit profile
+            </a>
+
 
         </div>
 
@@ -57,26 +64,33 @@
 
         <div id="userRequestTop">
             <p id="theNumber2">2</p>
-            <h3 id="connection">Connection Requests</h3>
+            <h3>Connection Requests</h3>
 
         </div>
 
         <div id="userRequestBottom">
 
 
-            <ul id="connectionList">
-                <li id="connectionItem1">
+            <ul>
+                <li>
+
                     <img id="davidPic" src="./icons1/user-circle.png" alt="David's photo">
+
                     <p id="gilmore">David G.</p>
+
                     <img id="davidButton1" src="./icons/accept-circle.png" alt="accept check mark">
+
                     <img id="davidButton2" src="./icons/close-circle.png" alt="close mark">
                 </li>
-                <li id="connectionItem2">
+
+                <li>
+
                     <img id="freddyPic" src="./user-circle.png" alt="Freddy's photo">
 
                     <p id="mercury">Freddy M.</p>
 
                     <img id="freddyButton1" src="./icons/accept-circle.png" alt="accept check mark">
+
                     <img id="freddyButton2" src="./icons/close-circle.png" alt="close mark">
                 </li>
             </ul>
@@ -90,8 +104,8 @@
 
         <div id="yourConnectionsTop">
 
-            <p id="theNumber500">500+</p>
-            <h3 id="yourCon">Your Connections</h3>
+            <p>500+</p>
+            <h3>Your Connections</h3>
 
         </div>
 
@@ -99,56 +113,66 @@
 
         <div id="yourConnectionsBottom">
 
-            <img id="conImage" src="./icons1/user-circle.png" alt="image of Edgar">
 
-            <p id="conNames1">Edgar P</p>
+            <p>
+                <img id="conImage" src="./icons1/user-circle.png" alt="image of Edgar"> Edgar P
+            </p>
 
-            <img id="conImage" src="./icons1/user-circle.png" alt="image of Michael">
 
-            <p id="conNames2">Michael M</p>
+            <p> 
+                <img id="conImage" src="./icons1/user-circle.png" alt="image of Edgar"> Michael M
+            </p>
 
-            <img id="conImage" src="./icons1/user-circle.png" alt="image of Stephen">
+            <p>
+                <img id="conImage" src="./icons1/user-circle.png" alt="image of Stephen">
+                Stephen K
+            </p>
 
-            <p id="conNames3">Stephen K</p>
 
-            <img id="conImage" src="./icons1/user-circle.png" alt="image of Jason">
+            <p>
+                <img id="conImage" src="./icons1/user-circle.png" alt="image of Jason"> Jason V
+            </p>
 
-            <p id="conNames4">Jason V</p>
 
-            <!-- part three of your connection -->
+
+
 
         </div>
 
-        <div id="yourConLast">
+        <!-- part three of your connection -->
 
-            <a id="viewMore" href="http://#">view more</a>
+    </div>
 
-        </div>
+    <div id="yourConLast">
 
-        <!-- end of your connection -->
+        <a id="viewMore" href="http://#">view more</a>
 
-        <!-- start of education -->
+    </div>
 
+    <!-- end of your connection -->
 
-
-
-
-        <div id="education">
-            <!-- black top -->
-            <h2 id="edu">Education</h2>
-        </div>
-
-        <div id="edu2">
+    <!-- start of education -->
 
 
 
-            <h2 id="cDojo">Coding Dojo - Full Stack Boot Camp</h2>
 
-            <p id="date">January 2022 - April 2022</p>
 
-            <p id="stacks">Triple black belt in Python, MERN, and C#...</p>
+    <div id="education">
+        <!-- black top -->
+        <h2 id="edu">Education</h2>
+    </div>
 
-        </div>
+    <div id="edu2">
+
+
+
+        <h2>Coding Dojo - Full Stack Boot Camp</h2>
+
+        <p id="date">January 2022 - April 2022</p>
+
+        <p id="stacks">Triple black belt in Python, MERN, and C#...</p>
+
+    </div>
 
 
     </div>
