--- a/likingLikes/index.html
+++ b/likingLikes/index.html
@@ -13,9 +13,10 @@
 
 <p id="p1">
     <span id=userName>Some User</span> 
-    <span id="numLikes">3</span> 
+    <span id="numLikes">3</span>  <-span is used here to target the number
+
     Like(s) <button onclick="addLikes()">Like</button>
-</p>
+</p> <-addLikes() is going to be our finction in js
 
 <p id="p2">Beep boop blop beep bop</p>
 
